<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_github"
        style="@style/ICON"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:layout_marginVertical="16dp"
        style="@style/SIGN_IN"
        android:text="@string/sign_in_with_github"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_with_enterprise"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_with_enterprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        style="@style/SIGN_IN_ENTERPRISE"
        android:textSize="14sp"
        android:layout_marginVertical="16dp"
        android:text="@string/sign_in_with_github_enterprise"
        app:layout_constraintBottom_toTopOf="@id/tv_privacy"/>

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_privacy"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColorLink="@color/link_color"
        style="@style/TEXT_GRAY"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>