<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BACKGROUND">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        style="@style/TOOLBAR"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/TEXTVIEW"
            android:padding="8dp"
            android:text="@string/explore"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/TOOLBAR"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/tv_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:padding="16dp"
            android:textStyle="bold"
            style="@style/TEXTVIEW"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linear_layout_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:background="@drawable/ripple_effect_item"
            android:paddingVertical="12dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_fire"
                app:tint="@color/white"
                android:padding="6dp"
                android:background="@drawable/bg_icon"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/thick_red_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issues"
                android:textSize="16sp"
                style="@style/TEXTVIEW"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_pull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/ripple_effect_item"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_smile"
                app:tint="@color/white"
                android:padding="6dp"
                android:background="@drawable/bg_icon"
                android:backgroundTint="@color/pink_color"
                android:contentDescription="@string/todo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull_requests"
                android:textSize="16sp"
                style="@style/TEXTVIEW"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="explore.json"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
