<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        style="@style/TOOLBAR"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TEXTVIEW"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/notifications"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        style="@style/TOOLBAR"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbox"
            android:paddingVertical="4dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            style="@style/CATEGORY"
            app:drawableEndCompat="@drawable/ic_down" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unread"
            android:paddingVertical="7dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            style="@style/CATEGORY"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:paddingVertical="4dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            style="@style/CATEGORY"
            android:layout_marginStart="8dp"
            app:drawableEndCompat="@drawable/ic_down" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_loop="true"
        app:lottie_fileName="empty_notifications.json"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>