<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="16dp"
    style="@style/BG_ITEM"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="150dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_profile_image"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/github_profile_image"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elon_musk"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:singleLine="true"
        style="@style/TEXT_GRAY"
        app:layout_constraintStart_toEndOf="@id/cv_profile_image"
        app:layout_constraintTop_toTopOf="@id/cv_profile_image"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile_image"/>

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_convertor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:singleLine="true"
        style="@style/TEXTVIEW"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_image"
        app:layout_constraintStart_toStartOf="@id/cv_profile_image"/>

    <TextView
        android:id="@+id/tv_repo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:singleLine="true"
        android:visibility="gone"
        tools:text="MVVM, Clean Architecture, UseCase"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_name"
        app:layout_constraintStart_toStartOf="@id/cv_profile_image"/>

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_fill"
        app:tint="@color/yellow_color"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cv_profile_image"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/tv_star_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        style="@style/TEXT_GRAY"
        app:layout_constraintStart_toEndOf="@id/img_star"
        app:layout_constraintTop_toTopOf="@id/img_star"
        app:layout_constraintBottom_toBottomOf="@id/img_star"/>

    <ImageView
        android:id="@+id/img_dot_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dot_fill"
        app:tint="@color/thick_pink_color"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/img_star"
        app:layout_constraintBottom_toBottomOf="@id/img_star"
        app:layout_constraintStart_toEndOf="@id/tv_star_number"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/tv_repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kotlin"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:singleLine="true"
        style="@style/TEXT_GRAY"
        app:layout_constraintStart_toEndOf="@id/img_dot_fill"
        app:layout_constraintTop_toTopOf="@id/img_star"
        app:layout_constraintBottom_toBottomOf="@id/img_star"/>

</androidx.constraintlayout.widget.ConstraintLayout>