<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:elevation="4dp"
        style="@style/TOOLBAR"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            style="@style/ICON"
            android:background="@drawable/ripple_icon"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TEXTVIEW"
            android:textSize="20sp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/repositories"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        style="@style/TOOLBAR"
        tools:listitem="@layout/item_search_with_repositories"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_your_stuff"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_empty_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_all_of_github_for_people_repositories_organizations_issues_and_pull_requests"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>